opam-version: "2.0"
version: "v0.16.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/polling_state_rpc"
bug-reports: "https://github.com/janestreet/polling_state_rpc/issues"
dev-repo: "git+https://github.com/janestreet/polling_state_rpc.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/polling_state_rpc/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"            {>= "4.14.0"}
  "async_kernel"     {>= "v0.16" & < "v0.17"}
  "async_rpc_kernel" {>= "v0.16" & < "v0.17"}
  "core"             {>= "v0.16" & < "v0.17"}
  "core_kernel"      {>= "v0.16" & < "v0.17"}
  "diffable"         {>= "v0.16" & < "v0.17"}
  "ppx_jane"         {>= "v0.16" & < "v0.17"}
  "dune"             {>= "2.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "An RPC which tracks state on the client and server so it only needs to send diffs across the wire."
description: "
An RPC which tracks state on the client and server so it only needs to send diffs across the wire.
"
